# elise

./: Cargo.toml  README.md  qemu
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: embedded.rs  kernel_image.rs  lib.rs  main.rs  mm.rs  panic.rs  print.rs  trampoline.asm  trampoline.rs
bootloader/src/efi/: efi.rs  memory.rs  mod.rs  net.rs  pxe.rs  status.rs
bootloader/src/efi/acpi/: acpi.rs  apic.rs  mod.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml  drivers.ld
kernel/src/: apic.rs  core_locals.rs  interrupts.rs  lib.rs  main.rs  mm.rs  panic.rs  print.rs  time.rs
kernel/src/acpi/: acpi.rs  apic.rs  apic_entry.asm  madt.rs  mod.rs  srat.rs
kernel/src/apic/: apic.rs  ioapic.rs  local.rs  mod.rs  system.rs
kernel/src/interrupts/: definitions.rs  gdt.rs  handler.rs  interrupts.rs  mod.rs
kernel/src/net/: dhcp.rs  ip.rs  mod.rs  net.rs  packet.rs  tcp.rs  todo  udp.rs
kernel/src/net/drivers/: intel.rs  mod.rs
kernel/src/net/protocols/: arp.rs  dhcp.rs  eth.rs  ip.rs  mod.rs  tcp.rs  udp.rs
kernel/src/net/protocols/ip/: ip.rs  mod.rs  v4.rs  v6.rs
kernel/src/pci/: drivers.rs  mod.rs  pci.rs
shared/: README.md
shared/autorefcount/: Cargo.toml
shared/autorefcount/src/: lib.rs  tests.rs
shared/buffer_cursor/: Cargo.toml
shared/buffer_cursor/src/: lib.rs  tests.rs
shared/const_assert/: Cargo.toml
shared/const_assert/src/: lib.rs
shared/core_reqs/: Cargo.toml
shared/core_reqs/src/: lib.rs
shared/cpu/src/: features.rs  lib.rs
shared/cursor/: Cargo.toml
shared/cursor/src/: lib.rs  tests.rs
shared/elf_parser/: Cargo.toml
shared/elf_parser/src/: lib.rs
shared/oncelock/: Cargo.toml
shared/oncelock/src/: lib.rs
shared/page_table/: Cargo.toml
shared/page_table/src/: lib.rs
shared/rangeset/: Cargo.toml
shared/rangeset/src/: lib.rs  tests.rs
shared/serial/: Cargo.toml
shared/serial/src/: lib.rs
shared/shared_data/: Cargo.toml
shared/spinlock/: Cargo.toml
shared/spinlock/src/: lib.rs
shared/trampoline/: Cargo.toml
(+4 files in other folders)
