[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
autorefcount = { path = "../shared/autorefcount" }
const_assert = { path ="../shared/const_assert" }
shared_data = { path = "../shared/shared_data" }
page_table = { path = "../shared/page_table" }
core_reqs = { path = "../shared/core_reqs" }
oncelock = { path = "../shared/oncelock" }
spinlock = { path = "../shared/spinlock" }
rangeset = { path = "../shared/rangeset" }
cursor = { path = "../shared/cursor" }
serial = { path = "../shared/serial/" }
cpu = { path = "../shared/cpu" }
